<resources>
    <string name="app_name">science_museum</string>
    <string name="title_activity_app_store">AppStoreActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_app_store_home">AppStoreHomeActivity</string>
    <string name="application">应用</string>
    <string name="home_page">主页</string>
    <string name="explore">探索</string>
    <string name="game">游戏</string>
    <string name="mine">我的</string>
    <string name="recommend">推荐</string>
    <string name="app_list">应用榜</string>
    <string name="game_list">游戏榜</string>
    <string name="classify">分类</string>
    <string name="nickname">未登录</string>
    <string name="userid">用户ID</string>
    <string name="home">首页</string>
    <string name="login_home">登录主页</string>
    <string name="register_home">注册主页</string>
    <string name="music_play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="next_music">下一首</string>
    <string name="music_player">音乐播放器</string>
    <string name="music_detail">音乐详情</string>
    <string name="exhibits">展品</string>
    <string name="about_museum">关于科技馆</string>
    <string name="volunteer_recruitment">志愿者招募</string>
    <string name="visit_by_appointment">预约参观</string>
    <string name="children_s_science_park">儿童科学乐园</string>
    <string name="discovery_hall">探索发现厅</string>
    <string name="wisdom_imagination_hall">智慧创想厅</string>
    <string name="universe_hall">宇宙奥秘厅</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">注册或登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="welcome">"欢迎!"</string>
    <string name="invalid_username">无效的用户名</string>
    <string name="invalid_password">无效的密码</string>
    <string name="login_failed">登录失败</string>
    <string name="account">账号</string>
    <string name="recipient">收件人</string>
    <string name="theme">主题</string>
    <string name="email_content">邮件内容</string>
    <string name="send">发送</string>
    <string name="save_draft">保存草稿</string>
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="phone_number">电话</string>
    <string name="occupation">职业</string>
    <string name="interest">兴趣</string>
    <string name="register">注册</string>
    <string name="account_colon">账号：</string>
    <string name="password_colon">密码：</string>
    <string name="name_colon">姓名：</string>
    <string name="gender_colon">性别：</string>
    <string name="phone_number_colon">电话：</string>
    <string name="occupation_colon">职业：</string>
    <string name="interests_colon">兴趣：</string>
    <string name="login">登录</string>
    <string name="original_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="original_password_colon">原密码：</string>
    <string name="new_password_colon">新密码：</string>
    <string name="confirm_new_password_colon">确认新密码：</string>
    <string name="modify">修改</string>
    <string name="username">用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="username_colon">昵称：</string>
</resources>
