<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.signup.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/username_colon"
                        android:textSize="25sp" />

                    <EditText
                        android:id="@+id/editTextUserName"
                        android:layout_width="315dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/password_colon"
                        android:textSize="25sp" />

                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="315dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:inputType="textPassword" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/gender_colon"
                        android:textSize="25sp" />

                    <EditText
                        android:id="@+id/editTextGender"
                        android:layout_width="315dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/phone_number_colon"
                        android:textSize="25sp" />

                    <EditText
                        android:id="@+id/editTextTelephoneNumber"
                        android:layout_width="315dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:inputType="phone" />
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/interests_colon"
                        android:textSize="25sp" />

                    <EditText
                        android:id="@+id/editTextIntersts"
                        android:layout_width="315dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:inputType="text" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            >

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_clickable_rectangle_with_small_rounded_corners"
                android:layout_centerHorizontal="true"
                android:textSize="25sp"
                android:text="@string/register" />
        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>